2004-06-14 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: new plugin.

2004-06-12 zunda <zunda at freeshell.org>
	* disp_referer.rb: option added for command-line executed benchmark
	* {en,ja}/disp_referer.rb: better regexp, thanks to Aoki-san http://i.loveruby.net/d/20040530.html#p02

2004-06-12  Kazuhiko  <kazuhiko@fdiary.net>
	* ping.rb: use cgi.params['key'][0] instead of cgi['key'][0]

2004-06-11 TADA Tadashi <sho@spc.gr.jp>
	* ping.rb: fix error when no @options['ping.list'].

2004-06-10 TADA Tadashi <sho@spc.gr.jp>
	* ping.rb: multi threading.
	* ping.rb: 'Sending ping' checkbox in edit form.

2004-06-09 TADA Tadashi <sho@spc.gr.jp>
	* append-css.rb: fix typo.
	* ping.rb: append.

2004-06-07 TADA Tadashi <sho@spc.gr.jp>
	* list.rb: apply_plugin to the result string.

2004-05-28  Masao Mutoh  <mutoh@highway.ne.jp>
	* search_form.rb: Fix a wrong anchor for Yahoo Japan.
	Reported by michieru.

2004-06-02 zunda <zunda at freeshell.org>
	* ja/disp_referrer.rb, en/disp_referrer.rb: constants tainted to be used under secure diaries and ruby-1.6.x. Thanks Kazuhiko.

2004-06-01  Kazuhiko  <kazuhiko@fdiary.net>
	* windex.rb: check existence of the pstore directory in load().
	* squeeze.rb: 'add_update_proc' in plugin mode only.

2004-05-29 TADA Tadashi <sho@spc.gr.jp>
	* image.rb: fix bad width attribute in secure mode.

2004-05-28  Masao Mutoh  <mutoh@highway.ne.jp>
	* a.rb: escape HTML in anchor tag by Akinori MUSHA.

2004-05-17  Kazuhiko  <kazuhiko@fdiary.net>
	* title_tag.rb: apply_plugin in a day's title.
	* title_tag.rb: escape diary's title and day's title.

2004-05-16  mput <root@mput.dip.jp>
	* title_tag.rb : New file.

2004-05-14 zunda <zunda at freeshell.org>
	* ja/weather.rb: correct translation of `rain showers': http://zunda.freeshell.org/d/20040428.html#p02

2004-05-09 TADA Tadashi <sho@spc.gr.jp>
	* tb-send.rb, tb-show.rb, output_rdf.rb: support absolute path of @conf.index.
	* tb-show.rb: apply_plugin to dc:title.

2004-05-05 TADA Tadashi <sho@spc.gr.jp>