@@ -1,4 +1,4 @@
-# makerss.rb: $Revision: 1.1 $
+# makerss.rb: $Revision: 1.2 $
 #
 # generate RSS file when updating.
 #
@@ -125,9 +125,9 @@ def makerss_header( uri )
 	xml = %Q[<?xml version="1.0" encoding="#{@makerss_encode}"?>
 <rdf:RDF xmlns="http://purl.org/rss/1.0/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/" xml:lang="#{@conf.html_lang}">
 	<channel rdf:about="#{rdf_url}">
-	<title>#{@conf.html_title}</title>
+	<title>#{CGI::escapeHTML( @conf.html_title )}</title>
 	<link>#{uri}</link>
-	<description>#{desc}</description>
+	<description>#{CGI::escapeHTML( desc )}</description>
 	<dc:creator>#{CGI::escapeHTML( @conf.author_name )}</dc:creator>
 	]
 end
