@@ -1,3 +1,6 @@
+2004-06-14  Kazuhiko  <kazuhiko@fdiary.net>
+	* makerss.rb: CGI::escapeHTML title and description.
+
 2004-06-14 TADA Tadashi <sho@spc.gr.jp>
 	* makerss.rb: new plugin.
 
